--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ Jinja2==3.1.2
 MarkupSafe==2.1.1
 numpy==1.23.3
 pandas==1.4.4
-psycopg2==2.9.3
+psycopg2-binary==2.9.3
 python-dateutil==2.8.2
 pytz==2022.2.1
 six==1.16.0
